เพิ่ม field ทำ Lab 9 ระบบบันทึกค่ารักษา  -close #258
